VSE: Meta Strips stuck with Extend (E) #29905

Closed
opened 2012-01-16 07:42:23 +01:00 by Sacha Goedegebure · 5 comments

%%%simple blend file added.

No change on Meta Strip when using Extend (E). So messy results with E before or on Meta Strip.

rev43403 win64%%%

%%%simple blend file added. No change on Meta Strip when using Extend (E). So messy results with E before or on Meta Strip. rev43403 win64%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I can't see any differences in behavior of Extend tool in 2.61 release and current trunk. There were some issues related on keymaps and operator properties which should be fixed now. Cn you please check newer version of blender from http://builder.blender.org/download/ ?%%%

%%%I can't see any differences in behavior of Extend tool in 2.61 release and current trunk. There were some issues related on keymaps and operator properties which should be fixed now. Cn you please check newer version of blender from http://builder.blender.org/download/ ?%%%

%%%I don't think the bug here is related to any recent changes, just a bug that was also in 2.61. To redo:

  • Press E, move mouse to the right, confirm.
  • Bug: meta strip snapped back to its previous position, but the two strips contained in it did move.
  • If you tab in and out of the metastrip it moves to the correct position..%%%
%%%I don't think the bug here is related to any recent changes, just a bug that was also in 2.61. To redo: * Press E, move mouse to the right, confirm. * Bug: meta strip snapped back to its previous position, but the two strips contained in it did move. * If you tab in and out of the metastrip it moves to the correct position..%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29905
No description provided.