Fix #29905: extend transform a sequencer meta strip did not update the position and length of the meta strip properly, only its contents. Also overlap check was done too soon giving false positives, should be after meta strip update.